<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xcerpt</string>
    <string name="title_activity_highlight" translatable="false">Xcerpt</string>
    <string name="paste_button">Paste</string>
    <string name="delete_button">Delete</string>
    <string name="next_button">Looks good!</string>
    <string name="back_button">Back</string>
    <string name="share_button">Done</string>
    <string name="tweet">Tweet</string>
    <string name="addComment">Add a comment</string>
    <string name="logout"><u>Logout</u></string>
    <string name="edit_message">Article excerpt</string>
    <string name="action_settings">Settings</string>
    <string name="tab_highlight">Highlight</string>
    <string name="tab_colour">Colour</string>
    <string name="tab_source">Source</string>
    <string name="instructions_highlight">Drag and tap to highlight (doesn\'t work yet!)</string>
    <string name="instructions_colour">Select a background and highlight colour.</string>
    <string name="instructions_source">Choose the correct source you wish to share.</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_share" translatable="false">Xcerpt</string>
    <string name="watermark" translatable="false">"\""</string>
    <string name="no_source_found">No source found! Xcerpt requires a source URL.</string>
    <string name="no_source_instructions">Please provide the URL in the Source tab.</string>
    <string name="highlight">Highlight</string>
    <string name="done">Done</string>
    <string name="highlight_hint">Tap any word in your excerpt to begin highlighting a selection. Give it a try!</string>
    <string name="ok">OK</string>
    <string name="no_internet_error">Error: Check your internet connection.</string>
    <string name="preview">Preview:</string>
    <string name="paste_hint">Paste the excerpt you want to share.</string>
    <string name="share_hint">Hint: Next time, after selecting the passage you want, instead of pressing the COPY button, press the SHARE button, and select Xcerpt!</string>
    <string name="view_on_twitter">View on Twitter</string>
    <string name="title_activity_input" translatable="false">InputActivity</string>
    <string name="paste_instructions">Paste Text</string>
    <string name="select_image_instructions">Select a screenshot</string>
    <string name="title_activity_crop">Crop screenshot</string>
    <string name="empty_clipboard_toast">The clipboard is empty.</string>
    <string name="crop_item">Crop</string>
    <string name="crop_instructions">For best results</string>
    <string name="crop_instructions_2">Crop only the text you wish to share. Avoid including any other elements in the frame.</string>
    <string name="first_time_setup_dialog_text">Performing first time setup…</string>
    <string name="highlight_hint_title">Highlight text to add emphasis</string>
    <string name="crop_error">Error: It doesn\'t seem like you cropped a text passage.</string>
    <string name="save_button">Save Image</string>
    <string name="no_screenshots">You have no screenshots.</string>
    <string name="highlight_hint_marshmallow">Long press or double-tap and drag to highlight text. Give it a try!</string>
    <string name="clipboard_no_text">The clipboard does not contain text.</string>
    <string name="share_item">Share</string>
    <string name="share">Share</string>
    <string name="customize">Customize</string>
    <string name="info">Info</string>
    <string name="error_file_not_saved">Error: File could not be saved.</string>
    <string name="image_saved">Saved to gallery!</string>
    <string name="processing_image">Processing image…</string>
    <string name="clipboard_empty">Clipboard Empty</string>
    <string name="posted_to_twitter">Posted to Twitter!</string>
    <string name="settings">Settings</string>
    <string name="proceed_with_initial_setup">Proceed with Initial Setup?</string>
    <string name="initial_setup_wifi_recommended_message">Initial setup will download files. A Wi-Fi connection is recommended.</string>
    <string name="proceed">Proceed</string>
    <string name="go_back">Go back</string>

</resources>