<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PasteActivity" >


    <item android:id="@+id/delete"
        android:title="@string/delete_button"
        android:icon="@drawable/abc_ic_clear_mtrl_alpha"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/paste"
        android:title="@string/paste_button"
        android:icon="@drawable/abc_ic_menu_paste_mtrl_am_alpha"
        android:orderInCategory="100"
        app:showAsAction="always" />


    <item android:id="@+id/looks_good"
        android:title="@string/next_button"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>