<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="ericbai.com.sharepiece.ShareActivity">

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/tweet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/user_name"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/logout"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:onClick="logOut"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/tweet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/addComment"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/character_count"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/tweet_button"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tweet"
                android:onClick="postTweet"/>
            </RelativeLayout>
        </LinearLayout>

    <ImageView
        android:id="@+id/final_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
