<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transcendentlabs.xcerpt.CustomizeActivity"
    android:orientation="vertical">

    <com.astuetz.PagerSlidingTabStrip
        android:id="@+id/tabs"
        app:pstsShouldExpand="true"
        android:layout_width="match_parent"
        android:layout_height="48dip" />

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/background"
            android:background="@android:color/holo_purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#CCFFFFFF"
                android:paddingTop="10dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingBottom="5dip"
                android:text="@string/loading"/>
            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:gravity="center_horizontal"
                android:textColor="#CCFFFFFF"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/loading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip">


                <ImageView
                    android:id="@+id/top_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/top_border"
                    android:scaleType="center"
                    />

                <TextView
                    android:id="@+id/content_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingBottom="5dip"
                    android:background="@android:color/white"/>

                <ImageView
                    android:id="@+id/bottom_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bottom_border"
                    android:scaleType="center"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="#80FFFFFF"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="10dip"
                android:text="@string/app_name"/>

        </LinearLayout>

    </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/back_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/back_button"
            android:onClick="back" />
        <Button
            android:id="@+id/share_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/share_button"
            android:onClick="share" />
        </LinearLayout>

</LinearLayout>
